--- a/ui/package.json
+++ b/ui/package.json
@@ -30,6 +30,11 @@
     "@types/jest": "^29.0.3",
     "@types/node": "^18.7.18",
     "@types/react-dom": "^17.0.2",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-material-ui": "1.0.1",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-security": "1.5.0",
     "typescript": "^4.8.3"
   }
 }
