--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,19 @@
+networks:
+  akita-ext-network:
+    driver: bridge
+
 services:
   akita:
     image: ${DESKTOP_PLUGIN_IMAGE}
+    networks:
+      - akita-ext-network
+  akita-db:
+    image: mongo:6.0.1
+    ports:
+      - ":27017"
+    volumes:
+      - akita-mongo-data:/data/db
+    networks:
+      - akita-ext-network
+volumes:
+  akita-mongo-data:
