--- a/ui/package.json
+++ b/ui/package.json
@@ -9,8 +9,10 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.1",
+    "base-64": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1"
   },
   "scripts": {
