--- a/ui/package.json
+++ b/ui/package.json
@@ -6,9 +6,10 @@
   "dependencies": {
     "@docker/docker-mui-theme": "<0.1.0",
     "@docker/extension-api-client": "0.3.0",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.6.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.13",
     "base-64": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
