--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
     "base-64": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-player": "^2.11.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1"
   },
