Remove hardcoded analytics configuration

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,9 @@
 services:
   akita:
+    container_name: akita-extension-backend
     image: ${DESKTOP_PLUGIN_IMAGE}
   akita-db:
+    container_name: akita-extension-db
     image: mongo:6.0.1
     ports:
       - ":27017"
