--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
+    "dev": "DISABLE_ESLINT_PLUGIN=true react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
