Add demo-server to docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,18 @@ services:
       - ":27017"
     volumes:
       - akita-mongo-data:/data/db
+  demo-server:
+    container_name: akita-extension-demo-server
+    image: wiremock/wiremock:2.32.0-alpine
+    volumes:
+      - ~/demo-server:/home/wiremock
+    ports:
+      - ":8080"
+    command:
+      - --verbose
+    deploy:
+      restart_policy:
+        condition: on-failure
 
 volumes:
   akita-mongo-data:
