Push image automatically when a new release is published (#56)
This will automatically push a new image to DockerHub anytime a Github
release is published. It should replicate our manual deployment flow
that is described here (excluding the verification step):
https://www.notion.so/akitasoftware/Deploying-Docker-Extension-842700866ba74f20a357dbdcc3be642f

--- a/application.yml
+++ b/application.yml
@@ -1,2 +1,7 @@
 analytics:
   enabled: false
+  segment_write_key: <SEGMENT_WRITE_KEY>
+  app:
+    name: docker-extension
+    version: <APP_VERSION>
+  batch_size: 1
